...
    return UILabelFactory.init(text: "", alignment: .center)
      .font(forTextStyle: .headline)
      .textColor(with: .darkGray)
  }()
  
  /// Bar button
  private lazy var refreshBarButton: UIBarButtonItem = {
    let refreshBarButton = UIBarButtonItem.init(barButtonSystemItem:.refresh,
                                                target: self, action: #selector(barButtonAction))
    refreshBarButton.tintColor = .black
    refreshBarButton.isEnabled = false
    refreshBarButton.accessibilityIdentifier = "refreshBarButton"
    return refreshBarButton
...
  }
  
  override func loadView() {
    super.loadView()
    
    view.backgroundColor = .white
    title = "Resume"
    view.accessibilityIdentifier = "ResumeViewController"
    // Settting UI elements
    addSubViews()
    addContraints()
    generateAccessibilityIdentifiers()
    
...
