...
        didSet{
            // Display error
            shouldEnableRefresh.value = true
            guard let title = errorDetails?.title,
                let description = errorDetails?.description else { return }
            showAlert.value = SingleButtonAlert(title: title, message: description,
                                                action: AlertAction(buttonTitle: "Ok",
                                                                    handler: nil))
            
            // Check if offline data is available
            guard let offlineResume = fetchOfflineResume() else{
                activityIndicatorDetails.value = (false,description )
                return
...
